# bookdb-sso

./: Dockerfile  LICENSE  docker-compose.yml  poetry2requirements.sh  pyproject.toml  requirements.txt
app/: main.py
app/classes/: TokenClass.py  UserClass.py
app/models/: RegisterModel.py
app/routers/: default.py
app/static/: main.js  styles.css
app/templates/: base.html.jinja  login.html.jinja  register.html.jinja
app/utils/: config.py
