[tool.poetry]
name = "bookdb-sso"
version = "0.1.0"
description = "SSO module for bookdb"
authors = ["Patryk Tabiś <p.tabis@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
redis = "^4.2.2"
hiredis = "^2.0.0"
Jinja2 = "^3.1.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
